@@ -1,13 +1,10 @@
 /**********************************************************************
- * $Source: /cvsroot/jameica/jameica.sensors/src/de/willuhn/jameica/sensors/devices/DeviceRegistry.java,v $
- * $Revision: 1.2 $
- * $Date: 2012/03/28 22:28:18 $
- * $Author: willuhn $
- * $Locker:  $
- * $State: Exp $
  *
- * Copyright (c) by willuhn software & services
- * All rights reserved
+ * Copyright (c) 2023 Olaf Willuhn
+ * All rights reserved.
+ * 
+ * This software is copyrighted work licensed under the terms of the
+ * Jameica License.  Please consult the file "LICENSE" for details. 
  *
  **********************************************************************/
 
@@ -49,7 +46,7 @@ public class DeviceRegistry
       {
         try
         {
-          devices.add(c.newInstance());
+          devices.add(c.getDeclaredConstructor().newInstance());
         }
         catch (Exception e)
         {
@@ -64,18 +61,3 @@ public class DeviceRegistry
     return devices;
   }
 }
-
-
-/**********************************************************************
- * $Log: DeviceRegistry.java,v $
- * Revision 1.2  2012/03/28 22:28:18  willuhn
- * @N Einfuehrung eines neuen Interfaces "Plugin", welches von "AbstractPlugin" implementiert wird. Es dient dazu, kuenftig auch Jameica-Plugins zu unterstuetzen, die selbst gar keinen eigenen Java-Code mitbringen sondern nur ein Manifest ("plugin.xml") und z.Bsp. Jars oder JS-Dateien. Plugin-Autoren muessen lediglich darauf achten, dass die Jameica-Funktionen, die bisher ein Object vom Typ "AbstractPlugin" zuruecklieferten, jetzt eines vom Typ "Plugin" liefern.
- * @C "getClassloader()" verschoben von "plugin.getRessources().getClassloader()" zu "manifest.getClassloader()" - der Zugriffsweg ist kuerzer. Die alte Variante existiert weiterhin, ist jedoch als deprecated markiert.
- *
- * Revision 1.1  2009/08/19 10:34:42  willuhn
- * @N initial import
- *
- * Revision 1.1  2009/08/18 16:29:19  willuhn
- * @N DIE SCHEISSE GEHT! ;)
- *
- **********************************************************************/
